--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
     <li><a href="./games/2019-03-21_lemmings.html">2019-03-21_lemmings</a></li>
     <li>2019-03-22</li>
     <li>2019-03-23_platformer-experiment (unity)</li>
+    <li>2019-03-24 look into streaming</li>
 </ul>
