Add 2019-03-26 add instructions

--- a/games/2019-03-15_tetris.html
+++ b/games/2019-03-15_tetris.html
@@ -1,5 +1,16 @@
 <canvas id="canv" width="220" height="420"></canvas>
 
+<div style="padding: 10px;">
+	<h1>Tetris</h1>
+	<p>
+		Side Arrows: Move Left and Right
+		<br>
+		Up Arrow: Rotate
+		<br>
+		Down Arrow: Drop Faster
+	</p>
+</div>
+
 <script>
 const height = 22 // total height
 const visibleHeight = 20
