--- a/games/2019-03-16_pokemon-battle.html
+++ b/games/2019-03-16_pokemon-battle.html
@@ -5,6 +5,14 @@
 <button type="button" id="option3">attack</button>
 <button type="button" id="option4">attack</button>
 
+<div style="padding: 10px;">
+	<h1>Pokemon Battle (Incomplete)</h1>
+	<p>
+		Click button to use attack
+	</p>
+</div>
+
+
 <style media="screen">
 button {
 	border: 1px;
