--- a/games/2019-03-17_block-dude.html
+++ b/games/2019-03-17_block-dude.html
@@ -1,5 +1,17 @@
 <canvas id="canv" width="450" height="300" style="border: 1px solid;"></canvas>
 
+<div style="padding: 10px;">
+	<h1>Block Guy</h1>
+	<p>
+		Side Arrows: Move left and right
+		<br>
+		Up Arrow: Pick up block
+		<br>
+		Down Arrow: Put down block
+	</p>
+	<p>2 levels</p>
+</div>
+
 <script>
 const height = 10
 const width = 15
