--- a/games/2019-03-18_tangram-movement.html
+++ b/games/2019-03-18_tangram-movement.html
@@ -1,5 +1,16 @@
 <canvas id="canv" width="500" height="500" style="border: 1px solid;"></canvas>
 
+<div style="padding: 10px;">
+    <h1>Tangram</h1>
+    <p>
+        Click and Drag: Move
+        <br>
+        Space while Dragging: Rotate
+        <br>
+        TODO: Flip
+    </p>
+</div>
+
 <script>
     const Vector = {
         COLINEAR: 0,
