--- a/games/2019-03-19_pong.html
+++ b/games/2019-03-19_pong.html
@@ -1,5 +1,15 @@
 <canvas id="canv" width="500" height="400" style="border: 1px solid;"></canvas>
 
+<div style="padding: 10px;">
+    <h1>Pong</h1>
+    <p>
+        Up and Down Arrows: Move Right Paddle
+        <br>
+        W and S Keys: Move Left Paddle
+    </p>
+    <p>Moving a paddle disables its AI</p>
+</div>
+
 <script>
     window.onload=function() {
         // TODO only allow single selected piece
