--- a/games/2019-03-21_lemmings.html
+++ b/games/2019-03-21_lemmings.html
@@ -1,10 +1,21 @@
 <canvas id="canv" width="150" height="100" style="border: 1px solid;"></canvas>
 
-<button type="button" id="digButton">dig</button>
-<button type="button" id="bombButton">bomb</button>
-<button type="button" id="stairsButton">stairs</button>
-<button type="button" id="stopButton">stop</button>
+<div style="padding: 10px;">
+    <button type="button" id="digButton">dig</button>
+    <button type="button" id="bombButton">bomb</button>
+    <button type="button" id="stairsButton">stairs</button>
+    <button type="button" id="stopButton">stop</button>
+</div>
 
+<div style="padding: 10px;">
+    <h1>Lemmings (Incomplete)</h1>
+    <p>
+        Click Button: Select Job
+        <br>
+        Click Guy: Give lemming a job
+    </p>
+    <p>Only dig somewhat works</p>
+</div>
 
 <style media="screen">
 canvas {
