--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <li>2019-03-20</li>
     <li><a href="./games/2019-03-21_lemmings.html">2019-03-21_lemmings</a></li>
     <li>2019-03-22</li>
-    <li>2019-03-23_platformer-experiment (unity)</li>
-    <li>2019-03-24 look into streaming</li>
+    <li><a href="./games/2019-03-23_platformer-experiment.html">2019-03-23_platformer-experiment (unity)</a></li>
+    <li><a href="./games/2019-03-24_streaming.html">2019-03-24_streaming</a></li>
     <li>2019-03-25</li>
+    <li>2019-03-26 add instructions to previous games</li>
+    <li><a href="./games/2019-03-26_lemmings.html">2019-03-26_snake</a></li>
 </ul>
