--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
     <li><a href="./games/2019-03-24_streaming.html">2019-03-24_streaming</a></li>
     <li>2019-03-25</li>
     <li>2019-03-26 add instructions to previous games</li>
-    <li><a href="./games/2019-03-26_lemmings.html">2019-03-26_snake</a></li>
+    <li><a href="./games/2019-03-26_update.html">2019-03-27_update</a></li>
 </ul>
