--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <li><a href="./games/2019-03-23_platformer-experiment.html">2019-03-23_platformer-experiment (unity)</a></li>
     <li><a href="./games/2019-03-24_streaming.html">2019-03-24_streaming</a></li>
     <li>2019-03-25</li>
-    <li>2019-03-26 add instructions to previous games</li>
-    <li><a href="./games/2019-03-26_update.html">2019-03-27_update</a></li>
+    <li><a href="./games/2019-03-26_update.html">2019-03-26 changelog</a></li>
+    <li><a href="./games/2019-03-27_snake.html">2019-03-27_snake</a></li>
 </ul>
