--- a/games/2019-03-27_snake.html
+++ b/games/2019-03-27_snake.html
@@ -25,12 +25,7 @@
 			this.ctx.scale(1, -1);
 		}
 
-		start() {
-			this.board = new Board(20, 20, Game.EMPTY)
-			this.snake = new Snake(this.board, this)
-			this.nextFrame = undefined
-			this.spawnFood()
-
+		init() {
 			document.addEventListener("keydown", keyPush)
 
 			const obj = this
@@ -50,6 +45,13 @@
 						break;
 				}
 			}
+		}
+
+		start() {
+			this.board = new Board(20, 20, Game.EMPTY)
+			this.snake = new Snake(this.board, this)
+			this.nextFrame = undefined
+			this.spawnFood()
 
 			this.loop()
 		}
@@ -246,6 +248,7 @@
 		const canv = document.getElementById("canv")
 
 		const game = new Game(canv)
+		game.init()
 		game.start()
 
 		Object.assign(G, {
