--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
     <li>2019-03-25</li>
     <li><a href="./games/2019-03-26_update.html">2019-03-26 changelog</a></li>
     <li><a href="./games/2019-03-27_snake.html">2019-03-27_snake</a></li>
+    <li><a href="./games/2019-03-28_minesweeper.html">2019-03-28_minesweeper</a></li>
 </ul>
