--- a/games/2019-03-29_box-dude.html
+++ b/games/2019-03-29_box-dude.html
@@ -1,32 +1,47 @@
-<canvas id="canv" width="450" height="300" style="border: 1px solid;"></canvas>
+<canvas id="canv" width="600" height="300" style="border: 1px solid;"></canvas>
 
 <div style="padding: 10px;">
-	<h1>Block Guy</h1>
+	<h1>Box Dude</h1>
 	<p>
 		Side Arrows: Move left and right
 		<br>
 		Up Arrow: Pick up block
 		<br>
 		Down Arrow: Put down block
-	</p>
-	<p>2 levels</p>
-	<p>
-		Version: 1
 		<br>
-		Next: <a href="2019-03-29_box-dude.html">2019-03-29 Box Dude</a>
+		r: Reset Level
+		<br>
+		Backspace: Undo
+		<br>
+		Number (1-3): Change level
+	</p>
+	<p>
+		Changelog:
+		<ul>
+			<li>Replace previous levels with 3 new levels</li>
+			<li>Add scrolling</li>
+			<li>Add undo</li>
+		</ul>
+	</p>
+	<p>
+		Version: 2
+		<br>
+		Previous: <a href="2019-03-17_block-dude.html">2019-03-17 Block Dude</a>
 	</p>
 </div>
 
 <script>
 const height = 10
-const width = 15
+const width = 20
 const squareSize = 30
+const screenOffset = 5
 let levelIndex
 let loadedLevel
 let guy
 
 const images = {}
 const sprites = {}
+let history = []
 
 var canv, ctx, activePiece, field, requestID, gameOver
 
@@ -45,34 +60,50 @@ const EXIT = 9
 const levels = [
 	{
 		height: 10,
-		width: 15,
+		width: 25,
 		stage: [
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 8, 0, 2, 0, 1, 0, 0, 9, 0, 0, 0, 0,
-			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
-			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 8, 0, 2, 0, 1, 0, 0, 0, 2, 0, 0, 2, 9, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
 		],
 	},
 	{
 		height: 10,
-		width: 15,
+		width: 25,
 		stage: [
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,
-			0, 0, 0, 8, 2, 2, 0, 1, 0, 0, 9, 0, 0, 0, 0,
-			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
-			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 0, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 2, 2, 0, 0, 0, 1, 0, 2, 0, 8, 0, 0, 2, 9, 0, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+		],
+	},
+	{
+		height: 10,
+		width: 25,
+		stage: [
+			1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 9, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 0, 0, 2, 0, 0, 0, 0, 0, 2, 0, 0, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 0, 2, 0, 0, 0, 0, 0, 0, 0, 2, 0, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 8, 0, 0, 2, 0, 2, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+			1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
 		],
 	},
 ]
@@ -167,9 +198,6 @@ class Guy {
 }
 
 function init() {
-	levelIndex = 0
-	loadLevel()
-
 	sprites['brick'] = new Sprite(images['brick'], 30, 30)
 	sprites['block'] = new Sprite(images['block'], 30, 30)
 	sprites['exit'] = new Sprite(images['exit'], 30, 30)
@@ -180,31 +208,35 @@ function init() {
 		[90, 0],
 	])
 
-	requestID = window.requestAnimationFrame(loop)
+	levelIndex = 0
+	loadLevel()
 }
 
 function drawStage() {
-	const { stage } = loadedLevel
+	const { stage, scroll } = loadedLevel
 
-	for (let i = 0; i < stage.length; i++) {
-		let {x, y} = indexToCoor(i)
-		switch (stage[i]) {
-			case OPEN:
-				break;
-			case WALL:
-				sprites['brick'].draw(x * squareSize, y * squareSize)
-				break;
-			case BLOCK:
-				sprites['block'].draw(x * squareSize, y * squareSize)
-				break;
-			case GUY:
-				sprites['guy'].draw(x * squareSize, y * squareSize, guy.pose())
-				break;
-			case EXIT:
-				sprites['exit'].draw(x * squareSize, y * squareSize)
-				break;
-			default:
+	for (let x = 0; x < width; x++) {
+		for (let y = 0; y < height; y++) {
+			let i = coorToIndex({x: scroll + x, y})
+			switch (stage[i]) {
+				case OPEN:
+					break;
+				case WALL:
+					sprites['brick'].draw(x * squareSize, y * squareSize)
+					break;
+				case BLOCK:
+					sprites['block'].draw(x * squareSize, y * squareSize)
+					break;
+				case GUY:
+					sprites['guy'].draw(x * squareSize, y * squareSize, guy.pose())
+					break;
+				case EXIT:
+					sprites['exit'].draw(x * squareSize, y * squareSize)
+					break;
+				default:
+					// throw new Error('Invalid stage index')
 
+			}
 		}
 	}
 }
@@ -221,21 +253,9 @@ function coorToIndex(obj) {
 	return obj.y * loadedLevel.width + obj.x
 }
 
-
-function loop(timestamp) {
-	update()
-	draw()
-	if (!gameOver) {
-		requestID = window.requestAnimationFrame(loop)
-	}
-}
-
 function draw() {
 	ctx.clearRect(0, 0, canv.width, canv.height)
 	drawStage()
-}
-
-function update() {
 }
 
 function inBounds(c) {
@@ -249,8 +269,8 @@ function inBounds(c) {
 
 function loadLevel() {
 	if (levelIndex >= levels.length) {
-		gameOver = true
-		return
+		// gameOver = true
+		levelIndex = 0
 	}
 
 	loadedLevel = JSON.parse(JSON.stringify(levels[levelIndex]))
@@ -262,6 +282,13 @@ function loadLevel() {
 			guy = new Guy(x, y)
 		}
 	}
+
+	loadedLevel.scroll = Math.min(loadedLevel.width-width, Math.max(0, guy.x - screenOffset))
+
+	history = []
+	updateUndo()
+
+	draw()
 }
 
 function nextLevel() {
@@ -285,15 +312,16 @@ function moveGuy(dx, dy, firstAttempt) {
 	const belowi = coorToIndex({x: x + dx, y: y + dy + 1})
 
 	if (inBounds(nc)) {
-		if (stage[di] == EXIT) {
-			nextLevel()
-			return
-		}
 
 		if (guy.holdingBlock) {
+			if (stage[di] == EXIT && stage[abovei] == OPEN) {
+				nextLevel()
+				return
+			}
+
 			if (stage[di] == OPEN && stage[abovei] == OPEN) {
 				if (stage[belowi] == OPEN) {
-					moveGuy(dx, dy + 1, false)
+					return moveGuy(dx, dy + 1, false)
 				} else {
 					guy.x = nx
 					guy.y = ny
@@ -303,12 +331,22 @@ function moveGuy(dx, dy, firstAttempt) {
 					stage[abovei] = BLOCK
 				}
 			} else if (firstAttempt) {
-				moveGuy(dx, dy-1, false)
+				return moveGuy(dx, dy-1, false)
 			}
 		} else {
+			if (stage[di] == EXIT) {
+				nextLevel()
+				return
+			}
+
 			if (stage[di] == OPEN) {
+				if (stage[belowi] == EXIT) {
+					nextLevel()
+					return
+				}
+
 				if (stage[belowi] == OPEN) {
-					moveGuy(dx, dy + 1, false)
+					return moveGuy(dx, dy + 1, false)
 				} else {
 					guy.x = nx
 					guy.y = ny
@@ -316,16 +354,65 @@ function moveGuy(dx, dy, firstAttempt) {
 					stage[di] = GUY
 				}
 			} else if (firstAttempt) {
-				moveGuy(dx, dy-1, false)
+				return moveGuy(dx, dy-1, false)
 			}
 		}
 	}
+
+	scrollScreen()
 
 	if (dx < 0) {
 		guy.facingRight = false
 	} else if (dx > 0) {
 		guy.facingRight = true
 	}
+}
+
+function scrollScreen() {
+	if (width - (guy.x - loadedLevel.scroll) < screenOffset) {
+		loadedLevel.scroll = Math.min(loadedLevel.width-width, loadedLevel.scroll+1)
+	} else if (guy.x - loadedLevel.scroll < screenOffset) {
+		loadedLevel.scroll = Math.max(0, loadedLevel.scroll-1)
+	}
+}
+
+function updateUndo() {
+	const currentState = JSON.stringify({
+		loadedLevel,
+		guyData: {
+			x: guy.x,
+			y: guy.y,
+			holdingBlock: guy.holdingBlock,
+			facingRight: guy.facingRight,
+		},
+	})
+	if (history.length == 0) {
+		history.push(currentState)
+	}
+
+	const previousState = history[history.length-1]
+	if (currentState == previousState) {
+		return
+	}
+
+	history.push(currentState)
+}
+
+function undo() {
+	let previousState
+	if (history.length == 1) {
+		previousState = history[0]
+	} else {
+		previousState = history.pop()
+	}
+
+	let state = JSON.parse(previousState)
+	loadedLevel = state.loadedLevel
+	let guyData = state.guyData
+	guy.x = guyData.x
+	guy.y = guyData.y
+	guy.holdingBlock = guyData.holdingBlock
+	guy.facingRight = guyData.facingRight
 }
 
 function startHold() {
@@ -392,22 +479,36 @@ function stopHold() {
 }
 
 function keyPush(e) {
+	if ('1' <= e.key &&  e.key <= '9') {
+		levelIndex = parseInt(e.key)-1
+		loadLevel()
+		return
+	}
 	switch(e.key) {
 		case 'ArrowLeft':
+			updateUndo()
 			moveGuy(-1, 0, true)
 			break;
 		case 'ArrowUp':
+			updateUndo()
 			startHold()
 			break;
 		case 'ArrowRight':
+			updateUndo()
 			moveGuy(1, 0, true)
 			break;
 		case 'ArrowDown':
+			updateUndo()
 			stopHold()
+			break;
+		case 'Backspace':
+			undo()
 			break;
 		case 'r':
 			loadLevel()
 			break;
 	}
+
+	draw()
 }
 </script>
