--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
     <li><a href="./games/2019-03-26_update.html">2019-03-26 changelog</a></li>
     <li><a href="./games/2019-03-27_snake.html">2019-03-27_snake</a></li>
     <li><a href="./games/2019-03-28_minesweeper.html">2019-03-28_minesweeper</a></li>
+    <li><a href="./games/2019-03-29_box-dude.html">2019-03-29_box-dude</a></li>
 </ul>
