--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@
     <li><a href="./games/2019-03-29_box-dude.html">2019-03-29_box-dude</a></li>
     <li>2019-03-30</li>
     <li>2019-03-31</li>
+    <li><a href="./games/2019-04-01_time-travel.html">2019-04-01_time-travel</a></li>
 </ul>
