--- a/index.html
+++ b/index.html
@@ -19,4 +19,5 @@
     <li><a href="./games/2019-04-01_time-travel.html">2019-04-01_time-travel</a></li>
     <li>2019-04-02</li>
     <li>2019-04-03</li>
+    <li><a href="./games/2019-04-04_box-dude.html">2019-04-04_box-dude</a></li>
 </ul>
