--- a/games/2019-04-04_box-dude.html
+++ b/games/2019-04-04_box-dude.html
@@ -572,18 +572,22 @@ function keyPush(e) {
 		case 'ArrowLeft':
 			updateUndo()
 			moveGuy(-1, 0, true)
+			e.preventDefault();
 			break;
 		case 'ArrowUp':
 			updateUndo()
 			startHold()
+			e.preventDefault();
 			break;
 		case 'ArrowRight':
 			updateUndo()
 			moveGuy(1, 0, true)
+			e.preventDefault();
 			break;
 		case 'ArrowDown':
 			updateUndo()
 			stopHold()
+			e.preventDefault();
 			break;
 		case 'Backspace':
 			undo()
