--- a/games/2019-03-18_tangram-movement.html
+++ b/games/2019-03-18_tangram-movement.html
@@ -318,6 +318,7 @@
                         }
                         draw()
                     }
+                    e.preventDefault();
                     break;
             }
         }
