--- a/index.html
+++ b/index.html
@@ -21,4 +21,5 @@
     <li>2019-04-03</li>
     <li><a href="./games/2019-04-04_box-dude.html">2019-04-04_box-dude</a></li>
     <li><a href="./games/2019-04-05_real-analysis.html">2019-04-05_real-analysis</a></li>
+    <li><a href="./games/2019-04-06_typescript.html">2019-04-06_typescript</a></li>
 </ul>
