--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
-<ul>
-    <li><a href="./games/2019-03-15_tetris.html">2019-03-15_tetris</a></li>
-    <li><a href="./games/2019-03-16_pokemon-battle.html">2019-03-16_pokemon-battle</a></li>
-    <li><a href="./games/2019-03-17_block-dude.html">2019-03-17_block-dude</a></li>
-    <li><a href="./games/2019-03-18_tangram-movement.html">2019-03-18_tangram-movement</a></li>
-    <li><a href="./games/2019-03-19_pong.html">2019-03-19_pong</a></li>
-    <li>2019-03-20_lemmings start</li>
-    <li><a href="./games/2019-03-21_lemmings.html">2019-03-21_lemmings</a></li>
-    <li>2019-03-22</li>
-    <li><a href="./games/2019-03-23_platformer-experiment.html">2019-03-23_platformer-experiment (unity)</a></li>
-    <li><a href="./games/2019-03-24_streaming.html">2019-03-24_streaming</a></li>
-    <li>2019-03-25</li>
-    <li><a href="./games/2019-03-26_update.html">2019-03-26 changelog</a></li>
-    <li><a href="./games/2019-03-27_snake.html">2019-03-27_snake</a></li>
-    <li><a href="./games/2019-03-28_minesweeper.html">2019-03-28_minesweeper</a></li>
-    <li><a href="./games/2019-03-29_box-dude.html">2019-03-29_box-dude</a></li>
-    <li>2019-03-30</li>
-    <li>2019-03-31</li>
-    <li><a href="./games/2019-04-01_time-travel.html">2019-04-01_time-travel</a></li>
-    <li>2019-04-02</li>
-    <li>2019-04-03</li>
-    <li><a href="./games/2019-04-04_box-dude.html">2019-04-04_box-dude</a></li>
-    <li><a href="./games/2019-04-05_real-analysis.html">2019-04-05_real-analysis</a></li>
-    <li><a href="./games/2019-04-06_typescript.html">2019-04-06_typescript</a></li>
-</ul>
-    <li>2019-04-07</li>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Game a Day</title>
+  </head>
+  <body>
+    <h1>I make a game every day.</h1>
+    <p>And by "game" I mean something and by "every day" I mean when I can.</p>
+    <p>I only test this website on the latest version of desktop Chrome.</p>
+    <ul>
+      <li><a href="./games/2019-03-15_tetris.html">2019-03-15_tetris</a></li>
+      <li><a href="./games/2019-03-16_pokemon-battle.html">2019-03-16_pokemon-battle</a></li>
+      <li><a href="./games/2019-03-17_block-dude.html">2019-03-17_block-dude</a></li>
+      <li><a href="./games/2019-03-18_tangram-movement.html">2019-03-18_tangram-movement</a></li>
+      <li><a href="./games/2019-03-19_pong.html">2019-03-19_pong</a></li>
+      <li>2019-03-20_lemmings start</li>
+      <li><a href="./games/2019-03-21_lemmings.html">2019-03-21_lemmings</a></li>
+      <li>2019-03-22</li>
+      <li><a href="./games/2019-03-23_platformer-experiment.html">2019-03-23_platformer-experiment (unity)</a></li>
+      <li><a href="./games/2019-03-24_streaming.html">2019-03-24_streaming</a></li>
+      <li>2019-03-25</li>
+      <li><a href="./games/2019-03-26_update.html">2019-03-26 changelog</a></li>
+      <li><a href="./games/2019-03-27_snake.html">2019-03-27_snake</a></li>
+      <li><a href="./games/2019-03-28_minesweeper.html">2019-03-28_minesweeper</a></li>
+      <li><a href="./games/2019-03-29_box-dude.html">2019-03-29_box-dude</a></li>
+      <li>2019-03-30</li>
+      <li>2019-03-31</li>
+      <li><a href="./games/2019-04-01_time-travel.html">2019-04-01_time-travel</a></li>
+      <li>2019-04-02</li>
+      <li>2019-04-03</li>
+      <li><a href="./games/2019-04-04_box-dude.html">2019-04-04_box-dude</a></li>
+      <li><a href="./games/2019-04-05_real-analysis.html">2019-04-05_real-analysis</a></li>
+      <li><a href="./games/2019-04-06_typescript.html">2019-04-06_typescript</a></li>
+      <li>2019-04-07</li>
+    </ul>
+    <p>Contact me at jarett.lee.pi@gmail.com.</p>
+  </body>
+</html>
