Add 2019-04-08 integers to integrals input form

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li><a href="./games/2019-04-05_real-analysis.html">2019-04-05_real-analysis</a></li>
       <li><a href="./games/2019-04-06_typescript.html">2019-04-06_typescript</a></li>
       <li>2019-04-07</li>
+      <li><a href="./games/2019-04-08_integer-to-integral.html">2019-04-08_integer-to-integral</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
   </body>
