--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>I make a game every day.</h1>
-    <p>And by "game" I mean something and by "every day" I mean when I can.</p>
+    <p>And by "game" I mean any project I get interested in and by "every day" I mean I try to do it every day.</p>
     <p>I only test this website on the latest version of desktop Chrome.</p>
     <ul>
       <li><a href="./games/2019-03-15_tetris.html">2019-03-15_tetris</a></li>
