Add 2019-04-08 BigInt implementation

--- a/games/2019-04-08_integer-to-integral.html
+++ b/games/2019-04-08_integer-to-integral.html
@@ -44,7 +44,7 @@
 
 			<h2>BigInteger</h2>
 			<form id="big-integer-form">
-				<input name="a" value="0" required pattern="[0-9]+"> + <input name="b" value="0" required pattern="[0-9]+"> = <output name="result"></output>
+				<input name="a" value="0" required> + <input name="b" value="0" required> = <output name="result"></output>
 				<button type="submit" name="submit">submit</button>
 			</form>
 		</div>
