Add 2019-04-10 integers to integrals update

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <li>2019-04-07</li>
       <li><a href="./games/2019-04-08_integer-to-integral.html">2019-04-08_integer-to-integral</a></li>
       <li>2019-04-09</li>
+      <li><a href="./updates/2019-04-10_integers-to-integrals.html">2019-04-10_integers-to-integrals</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
   </body>
