--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <li><a href="./games/2019-04-08_integer-to-integral.html">2019-04-08_integer-to-integral</a></li>
       <li>2019-04-09</li>
       <li><a href="./updates/2019-04-10_integers-to-integrals.html">2019-04-10_integers-to-integrals</a></li>
+      <li><a href="./updates/2019-04-11_integers-to-integrals.html">2019-04-11 update Integers to Integrals</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
   </body>
