Add 2019-04-13 Reddit update

--- a/updates/2019-04-13_statistics-hider.html
+++ b/updates/2019-04-13_statistics-hider.html
@@ -12,5 +12,6 @@
       <li>document.querySelectorAll is very useful</li>
       <li>I would like a null check accessor like ?. in Kotlin</li>
     </ul>
+    <p>I also found a method for Reddit using RES <a href="https://www.reddit.com/r/Enhancement/comments/6q65xq/is_there_a_way_to_completely_hide_all_thread_and/">https://www.reddit.com/r/Enhancement/comments/6q65xq/is_there_a_way_to_completely_hide_all_thread_and/</a> </p>
   </body>
 </html>
