Add 2019-04-14 integers to integrals update

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <li><a href="./updates/2019-04-11_integers-to-integrals.html">2019-04-11 update Integers to Integrals</a></li>
       <li>2019-04-12</li>
       <li><a href="./updates/2019-04-13_statistics-hider.html">2019-04-13 create statistics</a></li>
+      <li><a href="./updates/2019-04-14_integers-to-integrals.html">2019-04-14 update Integers to Integrals</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
   </body>
