--- a/updates/2019-04-11_integers-to-integrals.html
+++ b/updates/2019-04-11_integers-to-integrals.html
@@ -10,6 +10,7 @@
       <ul>
         <li>Link to repo: <a href="https://github.com/jarett-lee/integers-to-integrals">https://github.com/jarett-lee/integers-to-integrals</a></li>
         <li>Previous: <a href="./2019-04-10_integers-to-integrals.html">2019-04-10</a></li>
+        <li>Next: <a href="./2019-04-14_integers-to-integrals.html">2019-04-14</a></li>
       </ul>
       <li>Goals:</li>
       <ul>
