Minor add next link

--- a/updates/2019-04-10_integers-to-integrals.html
+++ b/updates/2019-04-10_integers-to-integrals.html
@@ -8,6 +8,8 @@
     <p>
       Started untracked work on integers to integrals:
       <a href="https://github.com/jarett-lee/integers-to-integrals">https://github.com/jarett-lee/integers-to-integrals</a>
+      <br>
+      Next: <a href="./2019-04-11_integers-to-integrals.html">2019-04-11</a>
       <ul>
         <li>Set up repo</li>
         <li>Set up mocha chai testing</li>
