Add 2019-04-16 statistics hider update

--- a/updates/2019-04-13_statistics-hider.html
+++ b/updates/2019-04-13_statistics-hider.html
@@ -6,7 +6,12 @@
   </head>
   <body>
     <p>I had the feeling that I was being influenced by the number of views a video had. For example, when watching a comedy video, I saw that it didn't have a lot of views and I A) felt like the video should have more views and B) questioned whether the video was "really" that good. To prevent this influence, I decided to create a chrome extension that hid everything.</p>
-    <p>Link: <a href="https://github.com/jarett-lee/statistics-hider">https://github.com/jarett-lee/statistics-hider</a></p>
+    <p>Links:
+      <ul>
+        <li><a href="https://github.com/jarett-lee/statistics-hider">https://github.com/jarett-lee/statistics-hider</a></li>
+        <li>Next: <a href="./2019-04-16_statistics-hider.html">2019-04-10</a></li>
+      </ul>
+    </p>
     <ul>
       <li>getting a local chrome extension up and running is very easy</li>
       <li>document.querySelectorAll is very useful</li>
