--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       <li><a href="./updates/2019-04-14_integers-to-integrals.html">2019-04-14 update Integers to Integrals</a></li>
       <li>2019-04-15</li>
       <li><a href="./updates/2019-04-16_statistics-hider.html">2019-04-16 update statistics hider</a></li>
+      <li>...</li>
+      <li><a href="./games/2019-05-11_mothers-day.html">2019-05-11 Mother's Day</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
   </body>
