Add 2020-02-04 tower defense

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
       <li><a href="./updates/2019-04-16_statistics-hider.html">2019-04-16 update statistics hider</a></li>
       <li>...</li>
       <li><a href="./games/2019-05-11_mothers-day.html">2019-05-11 Mother's Day</a></li>
+      <li>...</li>
+      <li><a href="./games/2020-02-04_tower-defense-part-1-shooting.html">2020-02-04 tower defense part 1 shooting</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
   </body>
