--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       <li>...</li>
       <li><a href="./games/2020-02-04_tower-defense-part-1-shooting.html">2020-02-04 tower defense part 1 shooting</a></li>
       <li>...</li>
+      <li><a href="./games/2020-02-08_tower-defense-part-2-pathing.html">2020-02-07 tower defense part 2 pathing</a></li>
+      <li>...</li>
       <li><a href="./games/2020-12-25_christmas.html">2020-12-25 christmas card</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
