--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <li><a href="./games/2019-05-11_mothers-day.html">2019-05-11 Mother's Day</a></li>
       <li>...</li>
       <li><a href="./games/2020-02-04_tower-defense-part-1-shooting.html">2020-02-04 tower defense part 1 shooting</a></li>
+      <li>...</li>
+      <li><a href="./games/2020-12-25_christmas.html">2020-12-25 christmas card</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
   </body>
