--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       <li><a href="./games/2020-02-08_tower-defense-part-2-pathing.html">2020-02-08 tower defense part 2 pathing</a></li>
       <li>...</li>
       <li><a href="./games/2020-12-25_christmas.html">2020-12-25 christmas card</a></li>
+      <li>...</li>
+      <li><a href="./games/2021-03-28_collision.html">2021-03-28 collision</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
   </body>
