Add incomplete collision page

--- a/games/2021-03-28_collision.html
+++ b/games/2021-03-28_collision.html
@@ -10,6 +10,8 @@
     <div>
         <h1>Collisions part 1 - Wall Collision</h1>
 
+        <li>Next: <a href="2021-04-10_collision.html">2021-04-10</a></li>
+
         <p>
             This collision code is incomplete and buggy. It only works in this specific example.
         </p>
