--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
       <li><a href="./games/2020-12-25_christmas.html">2020-12-25 christmas card</a></li>
       <li>...</li>
       <li><a href="./games/2021-03-28_collision.html">2021-03-28 collision</a></li>
+      <li>...</li>
+      <li><a href="./games/2021-03-28_collision.html">2021-04-10 collision</a></li>
     </ul>
     <p>Contact me at jarett.lee.pi@gmail.com.</p>
   </body>
